jasn/examples/invalid/bare_decimal_point.jasn
// Bare decimal point without any digits
{
  bad: .
}
